# keybinds-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md
.cargo/: config.toml
.git-hooks/: pre-push
.github/workflows/: ci.yml
bench/: Cargo.toml  README.md
bench/benches/: bench.rs  parse.rs
doc/: binding_syntax.md  versioning.md
examples/: arbitrary.rs  crossterm.rs  deserialize.rs  iced.rs  minimal.rs  serialize.rs  termwiz.rs  vim.rs  winit.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: dispatch.rs  parse.rs
src/: arbitrary.rs  crossterm.rs  error.rs  iced.rs  key.rs  keybind.rs  lib.rs  serde.rs  termwiz.rs  winit.rs
