[package]
name = "keybinds-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[features]
default = ["arbitrary"]
arbitrary = ["dep:arbitrary"]

[dependencies]
arbitrary = { version = "1.4.1", optional = true }
keybinds = { path = "..", features = ["arbitrary"] }
libfuzzer-sys = "0.4"

[[bin]]
name = "dispatch"
path = "fuzz_targets/dispatch.rs"
test = false
doc = false
bench = false
required-features = ["arbitrary"]

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false
